# RTRenderer

./: .gitignore  CMakeLists.txt  README.md
image/: CornellBox_al2_spp100.ppm  CornellBox_al3_spp100.ppm  CornellBox_al_spp1000.ppm  CornellBox_final2_spp100.ppm  CornellBox_final_spp100.ppm  CornellBox_final_spp1000.ppm  CornellBox_final_spp10000.ppm  CornellBox_sphere_spp100.ppm  CornellBox_test3_spp100.ppm  CornellBox_test_spp100.ppm  Cornellbox_spp1000.ppm  checked_texture_Two_sphere_spp100.ppm  checked_texture_spp100.ppm  conel_box_bk_spp1000.ppm  cornell_box_spp200.ppm  cornell_spp200.ppm  cornellbox_spp200.ppm  earth_spp100.ppm  earth_spp2048.ppm  light1_spp400.ppm  marble_spp100.ppm  moving_blur.ppm  moving_blur_spp100.ppm  moving_blur_spp500.ppm  noise_texture_Two_sphere_spp100.ppm  noise_texture_smooth_scale_2spp100.ppm  noise_texture_smooth_scale_spp100.ppm  noise_texture_smooth_spp100.ppm  turb_spp100.ppm  weekend_final_spp200.ppm
include/: Ray.h  aabb.h  box.h  bvh.h  camera.h  checker.h  color.h  constant_medium.h  cosine_pdf.h  dielectric.h  diffuse_light.h  flip_face.h  hittable.h  hittable_pdf.h  hittablelist.h  image_texture.h  isotropic.h  lambertian.h  material.h  matrix.h  metal.h  mixture_pdf.h  moving_sphere.h  noise.h  onb.h  pdf.h  perlin.h  ray.h  rotate.h  rtw_stb_image.h  rtweekend.h  solid_color.h  sphere.h  texture.h  translate.h  vec.h  vec3.h  xy_rect.h  xz_rect.h  yz_rect.h
src/: aabb.cpp  box.cpp  bvh.cpp  camera.cpp  checker.cpp  constant_medium.cpp  cosine_pdf.cpp  dielectric.cpp  flip_face.cpp  hittable.cpp  hittablelist.cpp  onb.cpp  (+13 more)
